plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.blink'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.bundles.spring.starter
    implementation libs.postgresql
    compileOnly libs.lombok
    annotationProcessor libs.lombok
    testImplementation libs.springboot.starter.test
}

tasks.named('test') {
    useJUnitPlatform()
}
